--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
         "name": "next"
       }
     ],
+    "baseUrl": "app/",
     "paths": {
-      "@/*": ["./*"]
+      "@/components/*": ["components/*"]
     }
+    // "paths": {
+    //   "@/*": ["./*"]
+    // }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
