--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "swr": "^2.2.2",
+    "typescript": "5.2.2",
+    "vercel": "^32.1.0"
   },
   "devDependencies": {
     "sass": "^1.66.1"
