--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.27",
+    "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^10.2.0",
     "swr": "^2.2.2",
     "typescript": "5.2.2",
     "vercel": "^32.1.0"
